--- a/QuizWebsite.Vue/Views/MultiPlayer/Index.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/Index.cshtml
@@ -1,50 +1,4 @@
-﻿<div class="container">
-    <input type="text" id="message" />
-    <input type="button" id="sendmessage" value="Send" />
-    <ul id="discussion"></ul>
-</div>
-
-<script src="~/lib/aspnet/signalr/dist/browser/signalr.js"></script>
-
-<script>
-    "use strict";
-    document.addEventListener('DOMContentLoaded', function () {
-        var messageInput = document.getElementById('message');
-        // Get the user name and store it to prepend to messages.
-        var name = prompt('Enter your name:', '');
-        // Set initial focus to message input box.
-        messageInput.focus();
-        // Start the connection.
-        var connection = new signalR.HubConnectionBuilder()
-            .withUrl('/quiz')
-            .build();
-        // Create a function that the hub can call to broadcast messages.
-        connection.on('broadcastMessage', function (message) {
-            // Html encode display name and message.
-            var encodedName = name;
-            var encodedMsg = message;
-            // Add the message to the page.
-            var liElement = document.createElement('li');
-            liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;'
-                + encodedMsg;
-            document.getElementById('discussion').appendChild(liElement);
-        });
-        // Transport fallback functionality is now built into start.
-        connection.start()
-            .then(function () {
-                console.log('connection started');
-                document.getElementById('sendmessage').addEventListener('click',
-                    function (event) {
-                        // Call the Send method on the hub.
-                        connection.invoke('send', messageInput.value);
-                        // Clear text box and reset focus for next comment.
-                        messageInput.value = '';
-                        messageInput.focus();
-                        event.preventDefault();
-                    });
-            })
-            .catch(error => {
-                console.error(error.message);
-            });
-    });
-</script>
+﻿
+<div class="text-center full-center">
+    <a class="btn btn-primary" asp-controller="MultiPlayer" asp-action="ClassicGame">Play</a>
+</div>    
