--- a/QuizWebsite.Vue/Views/Shared/_Layout.cshtml
+++ b/QuizWebsite.Vue/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/lib/vue/vue.js"></script>
     <script src="~/lib/axios/axios.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/aspnet/signalr/dist/browser/signalr.js"></script>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
