--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -28,7 +28,7 @@
             document.getElementById('sendmessage').addEventListener('click',
                 function (event) {
                     // Call the Send method on the hub.
-                    connection.invoke('send', messageInput.value);
+                    connection.invoke('AddToGroup');
                     // Clear text box and reset focus for next comment.
                     messageInput.value = '';
                     messageInput.focus();
