--- a/QuizWebsite.Vue/Views/MultiPlayer/Index.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/Index.cshtml
@@ -1,4 +1,4 @@
 ﻿
 <div class="text-center full-center">
-    <a class="btn btn-primary" asp-controller="MultiPlayer" asp-action="ClassicGame">Play</a>
+    <a class="btn btn-primary" asp-controller="MultiPlayer" asp-action="ClassicGame">Classic</a>
 </div>    
