--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -1,11 +1,37 @@
 ﻿<div id="app">
-    <div id="StartScreen" class="full-center">
+    <div id="StartScreen" v-if="!started" class="full-center">
         <label for="message">Username</label><br />
-        <input type="text" id="message" /><br />
+        <input autocomplete="off"  type="text" id="message" /><br />
         <input class="btn btn-primary mt-5 w-100" type="button" v-on:click="AddToGroup" value="Play" />
     </div>
-    <div id="playersScreen" class="w-25" v-for="player in players" v-bind:style="{ background: player.colorCode}">
-        {{player.name}}
+    <div class="sidebar" v-if="started">
+        <div id="playersScreen" class="player-field text-center" v-for="player in players" v-bind:style="{ background: player.colorCode}">
+            <b>{{player.name}}</b><br /><br />
+            <b>Score: {{player.score}}</b>
+        </div>
+    </div>
+    <div v-if="started">
+        <div class="m-3 flex-h-center">
+            <h3 class="text-center">vvvsd rg</h3>
+        </div>
+        <div class="center-block input-group mb-3 flex-h-center">
+            <div class="center-block input-group mb-3 flex-h-center">
+                <input id="answer" type="text" name="name" value="" autocomplete="off" class="radius mr-4" />
+                <button class="btn btn-dark">Confirm</button>
+            </div>
+        </div>
+        <div class="horizontal-center">
+            <table class="w-100 horizontal-center">
+                <tr v-for="y in 5" class="text-center">
+                    <td class="unanswered text-center">
+                        <b>{{y}}</b>
+                    </td>
+                    <td class="text-center unanswered">
+                        <b>{{y + 5}}</b>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
 <script>
@@ -17,8 +43,9 @@
     var app = new Vue({
         el: "#app",
         data: {
+            started: false,
             players: [{
-                name: "a"
+                name: ""
                 }]
         },
         created: function () {
@@ -43,7 +70,7 @@
                     .then(p => {
                         groupName = p;
                         console.log(groupName)
-                        document.getElementById('StartScreen').style.display = 'none'
+                        this.started = true;
                         axios
                             .get(url + 'api/Rooms/?name=' + groupName)
                             .then(response => {
