--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -5,13 +5,15 @@
         <input class="btn btn-primary mt-5 w-100" type="button" v-on:click="AddToGroup" value="Play" />
     </div>
     <div class="sidebar" v-if="started">
-        <div v-if="" id="playersScreen" class="player-field text-center" v-for="player in players" v-bind:style="{ background: player.colorCode}">
-            <b >{{player.name}}</b><br />
-            <b>Score: {{player.score}}</b>
-        </div>
-        <div v-if="" id="playersScreen" class="player-field text-center" v-for="player in players" v-bind:style="{ background: player.colorCode}">
-            <b>{{player.name}}</b><br />
-            <b>Score: {{player.score}}</b>
+        <div id="playersScreen" class="player-field text-center" v-for="player in players" v-bind:style="{ background: player.colorCode}">
+            <span v-if="connectionId == player.connectionId">
+                <b class="text-white">{{player.name}}(You)</b><br />
+                <b class="text-white">Score: {{player.score}}</b>
+            </span>
+            <span v-else>
+                <b>{{player.name}}</b><br />
+                <b>Score: {{player.score}}</b>
+            </span>
         </div>
     </div>
     <div v-if="started">
@@ -47,6 +49,7 @@
     var app = new Vue({
         el: "#app",
         data: {
+            connectionId: "e",
             started: false,
             players: [{
                 name: ""
@@ -59,6 +62,10 @@
             connection.start()
                 .then(function () {
                     console.log('connection started');
+                    connection.invoke('GetConnectionId')
+                        .then(id => {
+                            app.connectionId = id;
+                        });
                 })
                 .catch(error => {
                     console.error(error.message);
@@ -72,18 +79,19 @@
                 connection.invoke('AddToGroup', message.value)
                     .then(p => {
                         groupName = p;
-                        console.log(groupName)
                         this.started = true;
                         axios
                             .get(url + 'api/Rooms/?name=' + groupName)
                             .then(response => {
                                 app.players = response.data.players
+                                console.log(app.players)
                             })
                         connection.on('userJoined', function () {
                             axios
                                 .get(url + 'api/Rooms/?name=' + groupName)
                                 .then(response => {
                                     app.players = response.data.players
+                                    console.log(app.players)
                                 })
                         });
                         connection.on('userLeft', function () {
@@ -91,6 +99,7 @@
                                 .get(url + 'api/Rooms/?name=' + groupName)
                                 .then(response => {
                                     app.players = response.data.players
+                                    console.log(app.players)
                                 })
                         });
                     })
