--- a/QuizWebsite.Vue/wwwroot/css/site.css
+++ b/QuizWebsite.Vue/wwwroot/css/site.css
@@ -242,13 +242,13 @@ body {
 .sidebar {
     top: 0; /* Stay at the top */
     left: 10%;
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    position: absolute; /* Fixed Sidebar (stay in place on scroll) */
 }
-@media (max-width: 900px) {
+@media (max-width: 950px) {
     .sidebar {
         top: 0; /* Stay at the top */
         left: 0;
-        position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+        position: absolute; /* Fixed Sidebar (stay in place on scroll) */
     }
 
     .player-field {
@@ -273,12 +273,37 @@ body {
     .sidebar {
         top: 0; /* Stay at the top */
         left: 0;
-        position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+        position: absolute; /* Fixed Sidebar (stay in place on scroll) */
     }
 
     .player-field {
         margin-left: 1rem;
         margin-right: 1rem;
+        margin-top: 0.2rem;
+        width: 6em;
+        padding: 1em;
+        border: 1px solid #e3e3e3;
+        border-radius: 25px;
+        display: block;
+        -webkit-user-select: none; /* Safari */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* IE10+/Edge */
+        user-select: none; /* Standard */
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+}
+@media (max-width: 550px) {
+    .sidebar {
+        top: 0; /* Stay at the top */
+        left: 0;
+        position:absolute; /* Fixed Sidebar (stay in place on scroll) */
+    }
+
+    .player-field {
+        margin-left: 0.1rem;
+        margin-right: 0.1rem;
         margin-top: 0.2rem;
         width: 6em;
         padding: 1em;
