Change players to room in multiplayer

--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -5,7 +5,7 @@
         <input class="btn btn-primary mt-5 w-100" type="button" v-on:click="AddToGroup" value="Play" />
     </div>
     <div class="sidebar" v-if="started">
-        <div id="playersScreen" class="player-field text-center" v-for="player in players" v-bind:style="{ background: player.colorCode}">
+        <div id="playersScreen" class="player-field text-center" v-for="player in room.players" v-bind:style="{ background: player.colorCode}">
             <span v-if="connectionId == player.connectionId">
                 <b class="text-white">(You){{player.name}}</b><br />
                 <b class="text-white">Score: {{player.score}}</b>
@@ -51,8 +51,8 @@
         data: {
             connectionId: "e",
             started: false,
-            players: [{
-                name: ""
+            room: [{
+
                 }]
         },
         created: function () {
@@ -83,23 +83,20 @@
                         axios
                             .get(url + 'api/Rooms/?name=' + groupName)
                             .then(response => {
-                                app.players = response.data.players
-                                console.log(app.players)
+                                app.room = response.data
                             })
                         connection.on('userJoined', function () {
                             axios
                                 .get(url + 'api/Rooms/?name=' + groupName)
                                 .then(response => {
-                                    app.players = response.data.players
-                                    console.log(app.players)
+                                    app.room = response.data
                                 })
                         });
                         connection.on('userLeft', function () {
                             axios
                                 .get(url + 'api/Rooms/?name=' + groupName)
                                 .then(response => {
-                                    app.players = response.data.players
-                                    console.log(app.players)
+                                    app.room = response.data
                                 })
                         });
                     })
