--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -1,7 +1,7 @@
 ﻿<div id="app">
     <div id="StartScreen" v-if="!started" class="full-center">
         <label for="message">Username</label><br />
-        <input autocomplete="off"  class="radius" type="text" id="message" /><br />
+        <input autocomplete="off" class="radius" type="text" id="message" /><br />
         <input class="btn btn-primary mt-5 w-100" type="button" v-on:click="AddToGroup" value="Play" />
     </div>
     <div class="sidebar" v-if="started">
@@ -18,7 +18,7 @@
     </div>
     <div v-if="started">
         <div class="m-3 flex-h-center">
-            <h3 class="text-center">vvvsd rg</h3>
+            <h3 class="text-center">{{room.question}}</h3>
         </div>
         <div class="center-block input-group mb-3 flex-h-center">
             <div class="center-block input-group mb-3 flex-h-center">
@@ -53,7 +53,7 @@
             started: false,
             room: [{
 
-                }]
+            }]
         },
         created: function () {
 
@@ -84,6 +84,7 @@
                             .get(url + 'api/Rooms/?name=' + groupName)
                             .then(response => {
                                 app.room = response.data
+                                console.log(app.room)
                             })
                         connection.on('userJoined', function () {
                             axios
