Show question text

--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div v-if="started">
         <div class="m-3 flex-h-center">
-            <h3 class="text-center">{{room.question}}</h3>
+            <h3 class="text-center">{{room.question[0].questionText}}</h3>
         </div>
         <div class="center-block input-group mb-3 flex-h-center">
             <div class="center-block input-group mb-3 flex-h-center">
