--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -86,14 +86,7 @@
                                 app.room = response.data
                                 console.log(app.room)
                             })
-                        connection.on('userJoined', function () {
-                            axios
-                                .get(url + 'api/Rooms/?name=' + groupName)
-                                .then(response => {
-                                    app.room = response.data
-                                })
-                        });
-                        connection.on('userLeft', function () {
+                        connection.on('refresh', function () {
                             axios
                                 .get(url + 'api/Rooms/?name=' + groupName)
                                 .then(response => {
