--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div v-if="started">
-        <div v-if="countDown != 0">
+        <div v-if="!done">
             <div class="m-3 flex-h-center">
                 <h4>{{countDown}}</h4>
             </div>
@@ -42,7 +42,7 @@
                         <td class="text-center unanswered" v-if="answered[y+4] == ''">
                             <b>{{y + 5}}</b>
                         </td>
-                        <td class="unanswered text-center" v-else  v-bind:style="{ background: answeredColor[y+4]}">
+                        <td class="unanswered text-center" v-else v-bind:style="{ background: answeredColor[y+4]}">
                             <b>{{answered[y+4]}}</b>
                         </td>
                     </tr>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div v-else>
-            Results
+            Done
         </div>
     </div>
 </div>
@@ -70,7 +70,20 @@
             groupName: "",
             ready: false,
             room: [{
-
+                id: "",
+                name: "",
+                players: [{
+                    colorCode: "",
+                    connectionId: "",
+                    id: "",
+                    name: ""
+                }],
+                public: true,
+                question: [{
+                    category: Array(1),
+                    id: "",
+                    questionText: ""
+                }]
             }],
             answered: ["", "", "", "", "",
                 "", "", "", "", ""],
@@ -100,17 +113,23 @@
                     setTimeout(() => {
                         this.countDown -= 1
                         this.countDownTimer()
-                    }, 250)
+                    }, 1000)
                     this.ready = false
                 } else {
                     if (this.ready == false) {
                         axios
                             .get(url + 'api/Rooms/Ready/' + this.connectionId)
                             .then(response => {
-                                app.countDownTimer()
+
+                                app.answered = ["", "", "", "", "",
+                                    "", "", "", "", ""]
+                                app.answeredColor = ["", "", "", "", "",
+                                    "", "", "", "", ""]
+
                                 if (response.data.amountOfUsers == response.data.amountOfReadyUsers) {
                                     connection.invoke('Refresh', app.groupName)
                                 }
+
                                 app.ready = true;
                             })
                     }
@@ -152,6 +171,7 @@
                                     app.room = response.data
                                     console.log(response.data)
                                     app.countDown = 20
+                                    app.countDownTimer()
                                 })
                         });
                         connection.on('showAnswer', function (place, answer, color) {
