Fix room done bug

--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div v-if="started">
-        <div v-if="!done">
+        <div v-if="!room.done">
             <div class="m-3 flex-h-center">
                 <h4>{{countDown}}</h4>
             </div>
